/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.4.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id("application")
    id("org.openjfx.javafxplugin") version "0.1.0" apply false
    id("org.beryx.jlink") version "4.0.0"
}

// Apply a specific Java toolchain to ease working on different environments.
java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
	
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
}

sourceSets {
    main {
        java {
            setSrcDirs(listOf("src"))
            exclude("resources/")
        }

        resources {
            setSrcDirs(listOf("src/resources"))
        }
    }
}

tasks.processResources {
    val projectVersion = project.version
    inputs.property("version", projectVersion)
    filesMatching("gradle.bridge.properties") {
        expand("projectVersion" to projectVersion)
    }
}

application {
    // Define the main class for the application.
    mainClass = "gui.SuperMarioPaint"
}

val javaVersion = JavaVersion.current()

if (javaVersion >= JavaVersion.VERSION_11) {
    apply(plugin = "org.openjfx.javafxplugin")
    
    configure<org.openjfx.gradle.JavaFXOptions> {
        version = javaVersion.toString()
        modules("javafx.base", "javafx.controls", "javafx.fxml", "javafx.graphics", "javafx.media", "javafx.swing", "javafx.web")
    }
}

jlink {
	options.set(listOf("--strip-debug", "--compress", "zip-6", "--no-header-files", "--no-man-pages"))
    
    launcher {
        name = "SuperMarioPaint-" + project.version
    }
    
    jpackage {
    	imageOptions.addAll("--icon", "${project.projectDir}/ICON.ico")
    }
}
